--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link href="styles.css" type="text/css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
@@ -10,20 +11,25 @@
 
   <body>
     <header id="site-masthead">
-      <img src="#" alt="Logo" />
+      <img src="https://via.placeholder.com/38x41.png" alt="Logo" />
       <h1>Jamn Good Jelly</h1>
       <nav id="nav-main">
         <ul>
           <li><a href="#">Products</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
-          <li><img src="#" alt="Shopping cart" /></li>
+          <li>
+            <img
+              src="https://via.placeholder.com/38x38.png"
+              alt="Shopping cart"
+            />
+          </li>
         </ul>
       </nav>
     </header>
     <div id="about-container">
       <div id="about-image">
-        <img src="#" />
+        <img src="https://via.placeholder.com/200x200.png" />
       </div>
       <div id="about-description">
         <h2 class="large-header">About Us</h2>
