Add styling for all pages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav id="nav-main">
         <ul>
           <li><a href="product-list.html">Products</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#">Contact</a></li>
           <li>
             <img
@@ -41,22 +41,22 @@
         <li>
           <img src="https://via.placeholder.com/215x177.png" />
           <div class="black-background">
-            <p class="product-name">Blackberry Jam</p>
-            <p class="product-price">8 oz jar | $10</p>
+            <p class="featured-product-name">Blackberry Jam</p>
+            <p class="featured-product-price">8 oz jar | 10</p>
           </div>
         </li>
         <li>
           <img src="https://via.placeholder.com/215x177.png" />
           <div class="black-background">
-            <p class="product-name">%PRODUCTNAME%</p>
-            <p class="product-price">%PRODUCTPRICE%</p>
+            <p class="featured-product-name">%PRODUCTNAME%</p>
+            <p class="featured-product-price">%PRODUCTPRICE%</p>
           </div>
         </li>
         <li>
           <img src="https://via.placeholder.com/215x177.png" />
           <div class="black-background">
-            <p class="product-name">%PRODUCTNAME%</p>
-            <p class="product-price">%PRODUCTPRICE%</p>
+            <p class="featured-product-name">%PRODUCTNAME%</p>
+            <p class="featured-product-price">%PRODUCTPRICE%</p>
           </div>
         </li>
       </ul>
