--- a/about.html
+++ b/about.html
@@ -11,17 +11,23 @@
 
   <body>
     <header id="site-masthead">
-      <img src="https://via.placeholder.com/38x41.png" alt="Logo" />
-      <h1>Jamn Good Jelly</h1>
+      <img
+        src="https://via.placeholder.com/38x41.png"
+        alt="Logo"
+        name="logo"
+        class="nav-logo"
+      />
+      <h1><a href="index.html">Jamn Good Jelly</a></h1>
       <nav id="nav-main">
         <ul>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="product-list.html">Products</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#">Contact</a></li>
           <li>
             <img
               src="https://via.placeholder.com/38x38.png"
-              alt="Shopping cart"
+              alt="Shopping cart logo"
+              class="shopping-cart-logo"
             />
           </li>
         </ul>
@@ -32,7 +38,7 @@
         <img src="https://via.placeholder.com/200x200.png" />
       </div>
       <div id="about-description">
-        <h2 class="large-header">About Us</h2>
+        <h2 class="about-header">About Us</h2>
         <p>
           We're a husband and wife duo living in the Pacific Northwest who love
           the outdoors, our country, and quality food. We believe in working
