Add cart icon and company logo. Finish formatting quantity buttons.

--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
 
   <body>
     <header id="site-masthead">
-      <img
-        src="https://via.placeholder.com/38x41.png"
-        alt="Logo"
-        name="logo"
-        class="nav-logo"
-      />
+      <a href="index.html">
+        <img
+          src="./images/logo_header_white.png"
+          alt="Logo"
+          name="logo"
+          class="nav-logo"
+      /></a>
       <h1><a href="index.html">Jamn Good Jelly</a></h1>
       <nav id="nav-main">
         <ul>
           <li><a href="product-list.html">Products</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#">Contact</a></li>
-          <li>
+          <li class="shopping-cart">
             <img
-              src="https://via.placeholder.com/38x38.png"
+              src="./images/shopping_cart_white.png"
               alt="Shopping cart logo"
               class="shopping-cart-logo"
             />
+            <!-- <span class="badge">10</span> -->
           </li>
         </ul>
       </nav>
