--- a/product-details.html
+++ b/product-details.html
@@ -11,12 +11,13 @@
 
   <body>
     <header id="site-masthead">
-      <img
-        src="https://via.placeholder.com/38x41.png"
-        alt="Logo"
-        name="logo"
-        class="nav-logo"
-      />
+      <a href="index.html">
+        <img
+          src="./images/logo_header_white.png"
+          alt="Logo"
+          name="logo"
+          class="nav-logo"
+      /></a>
       <h1><a href="index.html">Jamn Good Jelly</a></h1>
       <nav id="nav-main">
         <ul>
@@ -25,7 +26,7 @@
           <li><a href="#">Contact</a></li>
           <li>
             <img
-              src="https://via.placeholder.com/38x38.png"
+              src="./images/shopping_cart_white.png"
               alt="Shopping cart logo"
               class="shopping-cart-logo"
             />
@@ -49,7 +50,9 @@
         </div>
         <div id="product-page-quantity">
           <p>Quantity:</p>
+          <button type="button" class="adj-btn dec">-</button>
           <input type="text" id="product-quantity-input" name="quantity" />
+          <button type="button" class="adj-btn inc">+</button>
         </div>
         <button type="button" id="product-page-cart-btn">Add to cart</button>
       </div>
