--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               alt="Shopping cart logo"
               class="shopping-cart-logo"
             />
-            <!-- <span class="badge">10</span> -->
+            <span class="badge">1</span>
           </li>
         </ul>
       </nav>
