--- a/product-list.html
+++ b/product-list.html
@@ -24,12 +24,13 @@
           <li><a href="product-list.html">Products</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#">Contact</a></li>
-          <li>
+          <li class="shopping-cart">
             <img
               src="./images/shopping_cart_white.png"
               alt="Shopping cart logo"
               class="shopping-cart-logo"
             />
+            <span class="badge">1</span>
           </li>
         </ul>
       </nav>
