--- a/index.html
+++ b/index.html
@@ -34,6 +34,33 @@
           </li>
         </ul>
       </nav>
+      <div class="triangle-up"></div>
+      <form class="shopping-cart-dropdown">
+        <div class="cart-summary">
+          <p class="cart-header">Cart</p>
+          <p>Total:</p>
+          <p class="total-price">$35.50</p>
+          <!--              <span class="paypal-btn">
+            <script src="https://www.paypal.com/sdk/js?client-id=sb"></script>
+            <script>
+              paypal.Buttons().render("body");
+            </script>
+          </span> -->
+        </div>
+        <div class="cart-item-list">
+          <p class="cart-header">Items</p>
+          <ul>
+            <li class="cart-item-0">
+              <p class="item-name">Salmonberry Jam</p>
+              <img src="https://via.placeholder.com/60x60.png" />
+              <p>Price:</p>
+              <p class="item-price">$40.00</p>
+              <p>Qty:</p>
+              <p class="item-quantity">5</p>
+            </li>
+          </ul>
+        </div>
+      </form>
     </header>
     <div id="home-container">
       <h2 class="home-page-header tagline">
