--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
       <form class="shopping-cart-dropdown">
         <div class="cart-summary">
           <p class="cart-header">Cart</p>
-          <p>Total:</p>
-          <p class="total-price">$35.50</p>
+          <div class="total-price">
+            <p>Total:</p>
+            <p>$35.50</p>
+          </div>
           <!--              <span class="paypal-btn">
             <script src="https://www.paypal.com/sdk/js?client-id=sb"></script>
             <script>
@@ -50,13 +52,27 @@
         <div class="cart-item-list">
           <p class="cart-header">Items</p>
           <ul>
-            <li class="cart-item-0">
-              <p class="item-name">Salmonberry Jam</p>
-              <img src="https://via.placeholder.com/60x60.png" />
-              <p>Price:</p>
-              <p class="item-price">$40.00</p>
-              <p>Qty:</p>
-              <p class="item-quantity">5</p>
+            <li class="cart-item__0">
+              <p class="name">Salmonberry Jam</p>
+              <p class="delete-btn">x</p>
+              <div class="item-container">
+                <img
+                  src="https://via.placeholder.com/60x60.png"
+                  class="item-image"
+                />
+                <div class="item-details">
+                  <div class="item-price-div">
+                    <p>Price:</p>
+                    <p class="price">$40.00</p>
+                  </div>
+                  <div class="item-quantity-div">
+                    <p>Qty:</p>
+                    <p class="quantity">15</p>
+                    <p class="cart-quantity-btn cart-dec-btn">-</p>
+                    <p class="cart-quantity-btn cart-inc-btn">+</p>
+                  </div>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
