--- a/index.html
+++ b/index.html
@@ -42,17 +42,12 @@
             <p>Total:</p>
             <p>$35.50</p>
           </div>
-          <!--              <span class="paypal-btn">
-            <script src="https://www.paypal.com/sdk/js?client-id=sb"></script>
-            <script>
-              paypal.Buttons().render("body");
-            </script>
-          </span> -->
+          <button class="checkout-btn">Checkout</button>
         </div>
         <div class="cart-item-list">
           <p class="cart-header">Items</p>
           <ul>
-            <li class="cart-item__0">
+            <!--             <li class="cart-item__0">
               <p class="name">Salmonberry Jam</p>
               <p class="delete-btn">x</p>
               <div class="item-container">
@@ -63,17 +58,17 @@
                 <div class="item-details">
                   <div class="item-price-div">
                     <p>Price:</p>
-                    <p class="price">$40.00</p>
+                    <p class="price">$0.00</p>
                   </div>
                   <div class="item-quantity-div">
                     <p>Qty:</p>
-                    <p class="quantity">15</p>
+                    <p class="quantity">1</p>
                     <p class="cart-quantity-btn cart-dec-btn">-</p>
                     <p class="cart-quantity-btn cart-inc-btn">+</p>
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
           </ul>
         </div>
       </form>
