Add breakpoints for other devices

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <li>
           <img src="https://via.placeholder.com/215x177.png" />
           <div class="black-background">
-            <p class="featured-product-name">Blackberry Jam</p>
+            <p class="featured-product-name">Huckleberry Jam</p>
             <p class="featured-product-price">8 oz jar | 10</p>
           </div>
         </li>
