Rewrite #nav-main to remove unnecessary code

--- a/index.html
+++ b/index.html
@@ -20,19 +20,17 @@
       /></a>
       <h1><a href="index.html">Jamn Good Jelly</a></h1>
       <nav id="nav-main">
-        <ul>
-          <li><a href="product-list.html">Products</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li class="shopping-cart">
-            <img
-              src="./images/shopping_cart_white.png"
-              alt="Shopping cart logo"
-              class="shopping-cart-logo"
-            />
-            <span class="badge">1</span>
-          </li>
-        </ul>
+        <a href="product-list.html">Products</a>
+        <a href="about.html">About</a>
+        <a href="#">Contact</a>
+        <div class="shopping-cart">
+          <img
+            src="./images/shopping_cart_white.png"
+            alt="Shopping cart logo"
+            class="shopping-cart-logo"
+          />
+          <span class="badge">1</span>
+        </div>
       </nav>
       <div class="triangle-up"></div>
       <form class="shopping-cart-dropdown">
