--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <span class="badge">1</span>
         </div>
       </nav>
+      <p class="mobile-menu-btn" onclick="toggleMenu()">Menu</p>
       <div class="triangle-up"></div>
       <form class="shopping-cart-dropdown">
         <div class="cart-summary">
@@ -125,3 +126,14 @@
     </div>
   </body>
 </html>
+
+<script>
+  function toggleMenu() {
+    var nav = document.getElementById("nav-main");
+    if (nav.style.visibility === "visible") {
+      nav.style.visibility = "hidden";
+    } else {
+      nav.style.visibility = "visible";
+    }
+  }
+</script>
