Add mobile design

--- a/index.html
+++ b/index.html
@@ -78,14 +78,24 @@
       </h2>
       <ul class="featured-products">
         <li>
-          <img src="https://via.placeholder.com/215x177.png" />
+          <!-- <img src="https://via.placeholder.com/215x177.png" /> -->
+          <!-- Temporarily commented out so I can work on the mobile design. -->
+          <img
+            src="https://via.placeholder.com/90x90.png"
+            class="mobile-img hidden"
+          />
           <div class="black-background">
             <p class="featured-product-name">Huckleberry Jam</p>
             <p class="featured-product-price">8 oz jar | 10</p>
           </div>
         </li>
         <li>
-          <img src="https://via.placeholder.com/215x177.png" />
+          <!-- <img src="https://via.placeholder.com/215x177.png" /> -->
+          <!-- Same as above. -->
+          <img
+            src="https://via.placeholder.com/90x90.png"
+            class="mobile-img hidden"
+          />
           <div class="black-background">
             <p class="featured-product-name">%PRODUCTNAME%</p>
             <p class="featured-product-price">%PRODUCTPRICE%</p>
